--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@mantine/core": "^7.12.1",
     "@mantine/hooks": "^7.12.1",
+    "@tabler/icons-react": "^3.12.0",
     "@tauri-apps/api": "^1.4.0",
     "@types/node": "20.2.4",
     "@types/react": "18.2.7",
